[package]
name = "png2t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
human-sort = "0.2.2"
image = "0.24.6"
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.8.2"
