[package]
name = "png2t"
version = "0.2.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/bepri/png2t"
license = "MIT"
description = "Render any media file supported by FFMPEG into your terminal!"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
crossterm = "0.26.1"
human-sort = "0.2.2"
image = "0.24.6"
itertools = "0.10.5"
lazy_static = "1.4.0"
regex = "1.8.2"
rodio = "0.17.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51", features = ["Win32_Foundation", "Win32_System_Console"]}
